[package]
name = "zbus-leak-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = {version = "*", features = ["tokio"]}
tokio = {version = "1", features = ["rt", "sync", "macros", "time", "rt-multi-thread", "io-std"]}
anyhow = "1"
regex = "*"
futures-util = "*"
tracing = "*"
tracing-subscriber = {version="*", features = ["env-filter"]}
serde = "*"
clap = {version = "4", features = ["derive"]}
